fix jumping text

--- a/apsc-collab-css/partials/_gallery-hover.scss
+++ b/apsc-collab-css/partials/_gallery-hover.scss
@@ -106,7 +106,7 @@
                             display: none;
                         }
                         .boxey-inner {
-                            padding: 6% 6% 6% 6%;
+                            padding: 17px;
                         }
                     }
 
@@ -115,7 +115,7 @@
                         -webkit-transform: translate3d(0, -0%, 0);
                         transform: translate3d(0, -0%, 0);
                         background: none;
-                        padding:10%;
+                        padding:27px;
                         border: 3px solid transparent;
                         h3
                         {
